Request Form Updates
Request Form Updates

--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -138,7 +138,7 @@
     margin-top: .5rem;    
 }
 
-.md-form .select2-container {
+.md-form.has-icon .select2-container {
     margin-left: 3rem !important;
     width: calc(100% - 3rem) !important;
 }
