Social Buttons and Page Layouts
Social Buttons and Page Layouts

--- a/ClotheOurKids.Web/Content/css/mySkin.css
+++ b/ClotheOurKids.Web/Content/css/mySkin.css
@@ -156,3 +156,5 @@
     border-color: #4285F4; }
   .kids-skin .pagination-primary-color .page-link {
     color: #4285F4; }
+  .kids-skin .bg-red {
+    background-color: #c00 !important;  }
