--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
@@ -1,21 +1,30 @@
 ﻿<div class="container">
 
-    <section class="section section-blog-fw">
-
+    <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
-            <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
+            <div class="col-12">
+                <h1 class="section-heading">Who We Are</h1>
+            </div>
+            <div class="col-12">
+                <p class="section-description"><i>learn about the people behind this organization</i></p>
+            </div>
+            <div class="col-12" style="text-align:center;">
+                <span>Share</span>
+                <!--Facebook-->
+                <a id="FBShare" type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
 
-                <!--Featured Image-->
-                <img src="~/Content/img/slide17.jpg" />
+                <!--Twitter-->
+                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FWhat-We-Do&hashtags=givekidsclothes&text=Find%20out%20what%20we%20give%20to%20kids%20in%20need."
+                   type="button" class="btn-floating btn-small btn-tw">
+                    <i class="fa fa-twitter"></i>
+                </a>
 
-                <!--Page Description-->
-                <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
-                    <h1 class="h1-responsive">Who We Are</h1>
-                    <p><strong>Giving</strong> Clothes, <strong>Showing</strong> Love, <strong>Building</strong> Confidence</p>
-                </div>
+                <!--Email-->
+                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
+
             </div>
         </div>
-    </section>
+    </section>  
 
     <hr class="between-sections">
 
@@ -23,85 +32,50 @@
     <section class="section team-section">
 
         <!--Section heading-->
-        <h1 class="section-heading">Meet Our Board</h1>
+        <h1 class="section-heading">Meet Our Officers</h1>
         <!--Section description-->
-        <p class="section-description">All the members of our Board of Directors are passionate about helping the kids in our area. They volunteer their time, wisdom, and talents to make sure we are successful.</p>
+        <p class="section-description">Our officers are dedicated to ensuring that we do everything that we can to clothe kids in North Alabama.</p>
 
         <!--First row-->
         <div class="row text-center">
 
             <!--First column-->
-            <div class="col-lg-3 col-md-6 mb-r">
+            <div class="col-lg-4 col-md-12 mb-r">
 
                 <div class="avatar">
                     <img src="~/Content/img/brandi.jpg" class="rounded-circle">
                 </div>
                 <h4>Brandi Breeden</h4>
                 <h5>President / Co-Founder</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab.</p>
+                <p>Brandi is the life and soul of our organization. She pours herself into the day to day operations, administrative tasks, outreach, and vision of Clothe Our Kids of North Alabama.</p>
 
-                <!--Facebook-->
-                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
             </div>
             <!--/First column-->
             <!--Second column-->
-            <div class="col-lg-3 col-md-6 mb-r">
+            <div class="col-lg-4 col-md-12 mb-r">
 
                 <div class="avatar">
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
                 </div>
-                <h4>John Doe</h4>
-                <h5>Web Developer</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab.</p>
-
-                <!--Linkedin-->
-                <a class="icons-sm li-ic"><i class="fa fa-linkedin"> </i></a>
-                <!--Facebook-->
-                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-                <!--GitHub-->
-                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
+                <h4>Perry</h4>
+                <h5>Vice President</h5>
+                <p>Perry serves as our Vice President. He dedicates his time to assist Brandi with many day to day activities as well as offering guidance and wisdom in the vision and planning of our operations.</p>
 
             </div>
             <!--/Second column-->
+
             <!--Third column-->
-            <div class="col-lg-3 col-md-6 mb-r">
+            <div class="col-lg-4 col-md-12 mb-r">
 
                 <div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="rounded-circle">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
                 </div>
-
-                <h4>Maria Kate</h4>
-                <h5>Photographer</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab.</p>
-
-                <!--Facebook-->
-                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-                <!--Pinterest-->
-                <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a>
-                <!--Instagram-->
-                <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a>
+                <h4>Michael Breeden</h4>
+                <h5>Secretary / Treasurer / Co-Founder</h5>
+                <p>Michael serves as our Secretary and Treasurer and helps out with the day to day activities as often as possible. He is also responsible for building and maintaining our website.</p>
 
             </div>
             <!--/Third column-->
-            <!--Fourth column-->
-            <div class="col-lg-3 col-md-6 mb-r">
-
-                <div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="rounded-circle">
-                </div>
-                <h4>Sarah Melyah</h4>
-                <h5>Front-end Developer</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab.</p>
-
-                <!--Google +-->
-                <a class="icons-sm gplus-ic"><i class="fa fa-google-plus"> </i></a>
-                <!--Facebook-->
-                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-                <!--GitHub-->
-                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
-
-            </div>
-            <!--/Fourth column-->
 
         </div>
         <!--/First row-->
